# mathx

./: .bazelrc  .gitignore  LICENSE.txt  README.md  WORKSPACE
config/: platform_config.bzl
dependency_examples/autodiff_example/: BUILD  test.cc
dependency_examples/bazel_example/: BUILD  README.md  test.cpp  utils.bzl
dependency_examples/cadquery_ocp_example/: generate_geom.py
dependency_examples/desc_opt_example/: test_desc.py
dependency_examples/eigen_example/: BUILD  test.cc
dependency_examples/fortran_example/: main.f90
mathx_core/: BUILD
mathx_core_py/: pyproject.toml
mathx_fusion/: pyproject.toml
mathx_fusion/src/code_fusion_reactor/: curvilinear.py
mathx_fusion/src/fusion/reactor/: biot_savart.py  plasma.py  reactor.py  simulate.py
mathx_fusion/src/mathx/fusion/: component.py  equilibrium.py  fuel_cycles.json  fuel_cycles.py  maxwell_boltzmann_distribution.py  plasma.py  reactor.py  stellarator_plasma.py  toroidal_plasma.py  torus_plasma.py
mathx_fusion/tests/: test_csg.py  test_equilibrium.py  test_fuel_cycles.py  test_maxwell_boltzmann_distribution.py  test_paramak.py  test_reactor.py
mathx_geometry_py/: pyproject.toml
mathx_geometry_py/src/mathx/geometry/: basis.py  box.py  curvilinear.py  cylinder.py  fourier.py  grid.py  hexagon.py  mesh.py  tetrahedron.py  torus.py  visualization.py
mathx_geometry_py/tests/: test_curvilinear.py  test_fourier.py  test_hexagon.py  test_shapes.py  test_tetrahedron.py  test_visualization.py
mathx_numerics/: BUILD
mathx_robotics/: README.md  pyproject.toml
mathx_robotics/data/: hyperparameters.json
mathx_robotics/data/agility_cassie/: cassie.xml
mathx_robotics/data/pendubot/: pendubot.xml
mathx_robotics/src/mathx/robotics/: acme_agent.py  agent.py  checkpoint_utilities.py  custom_agent.py  database.py  epsilon_greedy.py  geometry.py  hyperparameters.py  jax_utilities.py  log.py  mlp.py  models.py  mujoco_system.py  mujoco_utilities.py  optimizer.py  ornstein_uhlenbeck_process.py  policy_function.py  q_function.py  sb3_agent.py  solver.py  space.py  system.py  utilities.py
mathx_robotics/tests/: gymnasium_system.py  pendulum_system.py  quadratic_system.py  random_test_helpers.py  test_config.py  test_database.py  test_jax_utilities.py  test_mujoco_system.py  test_optimizer.py  test_ornstein_uhlenbeck_process.py  test_rl_cases.py  test_rl_convergence.py
mathx_testing/: BUILD  README.md
mathx_visualization/: BUILD  README.md
(+57 files in other folders)
